--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,18 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - run: swift test
+    - run: swift test --enable-test-discovery --sanitize=thread
   bionic:
     container: 
       image: vapor/swift:5.1-bionic
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - run: swift test
-  thread:
-    container: 
-      image: vapor/swift:5.1-bionic
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - run: swift test --sanitize=thread
+    - run: swift test --enable-test-discovery --sanitize=thread
