--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,14 +2,14 @@ name: test
 on:
 - pull_request
 jobs:
-  xenial:
+  jwt-kit_xenial:
     container: 
       image: vapor/swift:5.1-xenial
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - run: swift test --enable-test-discovery --sanitize=thread
-  bionic:
+  jwt-kit_bionic:
     container: 
       image: vapor/swift:5.1-bionic
     runs-on: ubuntu-latest
