--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,73 @@
 name: test
 on:
-- pull_request
+  pull_request:
+  push:
+    branches:
+    - master
 jobs:
-  jwt-kit_xenial:
-    container: 
-      image: vapor/swift:5.2-xenial
+  dependents:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v1
-    - run: swift test --enable-test-discovery --sanitize=thread
-  jwt-kit_bionic:
-    container: 
-      image: vapor/swift:5.2-bionic
+    strategy:
+      fail-fast: false
+      matrix:
+        dependent:
+          - jwt
+    container: swift:5.2-focal
+    steps: 
+      - name: Check out JWTKit
+        uses: actions/checkout@v2
+        with:
+          path: jwt-kit
+      - name: Check out provider
+        uses: actions/checkout@v2
+        with:
+          repository: vapor/${{ matrix.dependent }}
+          path: dependent
+      - name: Use local JWTKit
+        run: swift package edit jwt-kit --path ../jwt-kit
+        working-directory: dependent
+      - name: Run tests with Thread Sanitizer
+        run: swift test --enable-test-discovery --sanitize=thread
+        working-directory: dependent
+  linux:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          # 5.2 Stable
+          - swift:5.2-xenial
+          - swift:5.2-bionic
+          - swift:5.2-focal
+          - swift:5.2-centos8
+          - swift:5.2-amazonlinux2
+          # 5.2 Unstable
+          - swiftlang/swift:nightly-5.2-xenial
+          - swiftlang/swift:nightly-5.2-bionic
+          # 5.3 Unstable
+          - swiftlang/swift:nightly-5.3-xenial
+          - swiftlang/swift:nightly-5.3-bionic
+          # Master Unstable
+          - swiftlang/swift:nightly-master-xenial
+          - swiftlang/swift:nightly-master-bionic
+          - swiftlang/swift:nightly-master-focal
+          - swiftlang/swift:nightly-master-centos8
+          - swiftlang/swift:nightly-master-amazonlinux2
+    container: ${{ matrix.image }}
     steps:
-    - uses: actions/checkout@v1
-    - run: swift test --enable-test-discovery --sanitize=thread
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Run tests with Thread Sanitizer
+        timeout-minutes: 10
+        run: swift test --enable-test-discovery --sanitize=thread
+  macOS:
+    runs-on: macos-latest
+    steps:
+      - name: Select latest available Xcode
+        uses: maxim-lobanov/setup-xcode@1.0
+        with:
+          xcode-version: latest
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Run tests with Thread Sanitizer
+        run: swift test --enable-test-discovery --sanitize=thread
