--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,3 +28,5 @@ jobs:
 
   unit-tests:
      uses: vapor/ci/.github/workflows/run-unit-tests.yml@main
+     with:
+       with_public_api_check: ${{ github.event_name == 'pull_request' && !contains(github.base_ref, 'jwtkit-5') }}
