--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: jemalloc dependency
         run: apt-get update && apt-get install -y libjemalloc-dev
+      - name: Fix Git config
+        run: git config --global --add safe.directory "${GITHUB_WORKSPACE}"
       - name: Run benchmarks for PR branch
         run: |
           cd Benchmarks
