Update benchmark workflow

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -13,18 +13,19 @@ jobs:
       - name: jemalloc dependency
         run: apt-get update && apt-get install -y libjemalloc-dev
       - name: Fix Git config
-        run: git config --global --add safe.directory "${GITHUB_WORKSPACE}"
+        run: |
+          git config --global --add safe.directory "${GITHUB_WORKSPACE}"
+          git fetch origin main:main --quiet
       - name: Run benchmarks for PR branch
         run: |
           cd Benchmarks
           swift package --allow-writing-to-directory .benchmarkBaselines/ benchmark baseline update pull_request --no-progress --quiet
-          git fetch origin main:main
           git checkout main
           swift package --allow-writing-to-directory .benchmarkBaselines/ benchmark baseline update main --no-progress --quiet
-          date >>"${GITHUB_STEP_SUMMARY}"
-          swift package benchmark baseline check main pull_request --format markdown >>"${GITHUB_STEP_SUMMARY}"
-          echo '---' >>"${GITHUB_STEP_SUMMARY}"
-          swift package benchmark baseline compare main pull_request --no-progress --quiet --format markdown >> $GITHUB_STEP_SUMMARY
+          date >> "${GITHUB_STEP_SUMMARY}"
+          swift package benchmark baseline check main pull_request --format markdown >> "${GITHUB_STEP_SUMMARY}"
+          echo '---' >> "${GITHUB_STEP_SUMMARY}"
+          swift package benchmark baseline compare main pull_request --no-progress --quiet --format markdown >> "${GITHUB_STEP_SUMMARY}"
       - uses: thollander/actions-comment-pull-request@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
