--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
           path: jwt
       - name: Use local JWTKit
         run: swift package --package-path jwt edit jwt-kit --path ./jwt-kit
-      - name: Run tests
-        run: swift test --package-path jwt
+      - name: Run tests with Thread Sanitizer
+        run: swift test --package-path jwt --sanitize=thread
 
   unit-tests:
      uses: vapor/ci/.github/workflows/run-unit-tests.yml@main
