--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -10,24 +10,30 @@ jobs:
     container: swift:jammy
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: jemalloc dependency
         run: apt-get update && apt-get install -y libjemalloc-dev
       - name: Fix Git config
         run: |
           git config --global --add safe.directory "${GITHUB_WORKSPACE}"
-          git fetch origin main:main --quiet
       - name: Run benchmarks for PR branch
+        continue-on-error: true
         run: |
           cd Benchmarks
-          swift package --allow-writing-to-directory .benchmarkBaselines/ benchmark baseline update pull_request --no-progress --quiet
+          swift package -c release --allow-writing-to-directory .benchmarkBaselines/ benchmark baseline update pull_request --no-progress --quiet
+          git stash
           git checkout main
-          swift package --allow-writing-to-directory .benchmarkBaselines/ benchmark baseline update main --no-progress --quiet
+          swift package -c release --allow-writing-to-directory .benchmarkBaselines/ benchmark baseline update main --no-progress --quiet
           date >> "${GITHUB_STEP_SUMMARY}"
-          swift package benchmark baseline check main pull_request --format markdown >> "${GITHUB_STEP_SUMMARY}"
+          swift package -c release benchmark baseline check main pull_request --format markdown >> "${GITHUB_STEP_SUMMARY}"
           echo '---' >> "${GITHUB_STEP_SUMMARY}"
-          swift package benchmark baseline compare main pull_request --no-progress --quiet --format markdown >> "${GITHUB_STEP_SUMMARY}"
+          swift package -c release  benchmark baseline compare main pull_request --no-progress --quiet --format markdown >> "${GITHUB_STEP_SUMMARY}"
+      - name: Get formatted date
+        id: get-date
+        run: echo "date=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
       - uses: thollander/actions-comment-pull-request@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          message: ${{ format('[PR benchmark comparison Linux|main]({0}/{1}/actions/runs/{2})', github.server_url, github.repository, github.run_id) }}
+          message: ${{ format('[PR benchmark comparison with main on ubuntu-latest run at {0}]({1}/{2}/actions/runs/{3})', steps.get-date.outputs.date, github.server_url, github.repository, github.run_id) }}
           comment_tag: 'PR benchmark comparison Linux'
