--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Compare benchmarks
         continue-on-error: true
         run: |
+          cd Benchmarks
           date >> "${GITHUB_STEP_SUMMARY}"
           swift package -c release --disable-sandbox benchmark baseline check main pull_request --format markdown >> "${GITHUB_STEP_SUMMARY}"
       - name: Get formatted date
