--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
         run: swift test --package-path jwt --sanitize=thread
 
   unit-tests:
-     uses: vapor/ci/.github/workflows/run-unit-tests.yml@main
-     with:
-       with_public_api_check: ${{ github.event_name == 'pull_request' }}
+    uses: vapor/ci/.github/workflows/run-unit-tests.yml@main
+    with:
+      with_api_check: ${{ github.event_name == 'pull_request' }}
+    secrets: inherit
