--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,3 +31,14 @@ jobs:
     with:
       with_api_check: ${{ github.event_name == 'pull_request' }}
     secrets: inherit
+
+  ios-tests:
+    if: ${{ !(github.event.pull_request.draft || false) }}
+    runs-on: macos-latest
+    steps:
+      - name: Check out JWTKit
+        uses: actions/checkout@v4
+      - name: Run iOS Tests on iOS 15
+        run: xcodebuild test -scheme JWTKit -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.0'
+      - name: Run iOS Tests on iOS 16
+        run: xcodebuild test -scheme JWTKit -destination 'platform=iOS Simulator,name=iPhone 13,OS=16.0'
