--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,6 @@ jobs:
       - name: Check out JWTKit
         uses: actions/checkout@v4
       - name: Run iOS Tests on iOS 15
-        run: xcodebuild test -scheme JWTKit -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.0'
+        run: xcodebuild test -scheme jwt-kit -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.0'
       - name: Run iOS Tests on iOS 16
-        run: xcodebuild test -scheme JWTKit -destination 'platform=iOS Simulator,name=iPhone 13,OS=16.0'
+        run: xcodebuild test -scheme jwt-kit -destination 'platform=iOS Simulator,name=iPhone 13,OS=16.0'
