Add availability annotations to unavailable crypto properties (#192)
* Add availability annotations to unavailable crypto properties

* Try making CI fail

* Try again

* 🤦‍♂️

* Add back compat annotations

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,5 @@ jobs:
     steps:
       - name: Check out JWTKit
         uses: actions/checkout@v4
-      - name: Run iOS Tests on iOS 15
-        run: xcodebuild test -scheme jwt-kit -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.0'
-      - name: Run iOS Tests on iOS 16
-        run: xcodebuild test -scheme jwt-kit -destination 'platform=iOS Simulator,name=iPhone 13,OS=16.0'
+      - name: Run iOS Tests
+        run: xcodebuild -scheme jwt-kit -destination generic/platform=iOS
