--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,17 +34,5 @@ jobs:
       with_linting: true
       with_windows: true
       with_musl: true
+      ios_scheme_name: jwt-kit
     secrets: inherit
-
-  ios-tests:
-    if: ${{ !(github.event.pull_request.draft || false) }}
-    runs-on: macos-latest
-    steps:
-      - name: Select appropriate Xcode version
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: 16.0
-      - name: Check out JWTKit
-        uses: actions/checkout@v4
-      - name: Run iOS Tests
-        run: xcodebuild -scheme jwt-kit -destination generic/platform=iOS
