--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -6,7 +6,9 @@ on:
   
 jobs:
   benchmark-delta-linux:
-    runs-on: ubuntu-latest
+    runs-on:
+      - runs-on=${{ github.run_id }}
+      - runner=2cpu-linux-x64
     container: swift:jammy
     steps:
       - uses: actions/checkout@v4
