--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -8,7 +8,7 @@ jobs:
   benchmark-delta-linux:
     runs-on:
       - runs-on=${{ github.run_id }}
-      - runner=2cpu-linux-x64
+      - runner=2cpu-linux-arm64
     container: swift:jammy
     steps:
       - uses: actions/checkout@v4
