--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -4,6 +4,7 @@ on:
   pull_request_review:
     types: [submitted]
   pull_request:
+    branches: [ main ]
     types: [synchronize]
     paths:
       - '**/*.swift'
