--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,11 +1,18 @@
 name: Benchmark PR vs main
 on:
   workflow_dispatch:
+  pull_request_review:
+    types: [submitted]
   pull_request:
     branches: [ main ]
-  
+    types: [synchronize]
+    paths:
+      - 'Sources/*.swift'
+      - .github/workflows/benchmark.yml 
+
 jobs:
   benchmark-delta-linux:
+    if: github.event.review.state == 'approved'
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=2cpu-linux-arm64
