add Benchmarks/ to benchmark-triggering paths too

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -8,6 +8,7 @@ on:
     types: [synchronize]
     paths:
       - Sources/*.swift
+      - Benchmarks/*.swift
       - .github/workflows/benchmark.yml
 
 jobs:
